# drivedeploy

./: .gitignore  LICENSE  README.md  change-log.md  pyproject.toml  ruff.toml
examples/: round_trip_demo.py
plans/: Phase0_Overview.md  Phase1_MVP.md
src/drivedeploy/: __init__.py  errors.py
src/drivedeploy/core/: __init__.py  config.py  hashing.py  layout.py  manifest.py  platforms.py  versioning.py
src/drivedeploy/freezers/: __init__.py  base.py  pyinstaller.py
src/drivedeploy/publish/: __init__.py  archive.py  embed.py  publisher.py
src/drivedeploy/update/: __init__.py  client_config.py  download.py  swap_windows.py  updater.py
tests/: conftest.py  test_archive.py  test_config.py  test_download.py  test_embed.py  test_freezers.py  test_hashing.py  test_layout.py  test_manifest.py  test_platforms.py  test_publisher.py  test_swap.py  test_updater.py  test_versioning.py
