[project]
name = "drivedeploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sterling Collins", email = "sterlingcollins@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
drivedeploy = "drivedeploy:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
